09 Mar 2006: 0.2.4 Miek <miek@miek.nl>
   -- bugfixes --
   * mirror.sh: use chown -h for symlinks
   * mirorr.sh: mirror_suffix() use +DD.HH:MM again (Graham King)
   * all scripts: enabled set -o nounset, to catch unbound vars


02 Mar 2006: 0.2.3 Miek <miek@miek.nl>
   -- features and bugfixes --
   * gfunc.c: bug, close files when catting them in cat().
   * gfunc.c: bug, size check should come before switch.
   * crawler.c: bug, use DIR_SEP everywhere
   * crawler.c: removed the filestack, and added files
     directly to the tree, this eliminates half a the
     mallocs, cutting down on rdup's memory req. 
     It is not faster (rdup is I/O bound)
   * rdup.c: removed the printing of directories when finished.
   * rdup.c: -vv now prints the processed files to standard error.
     (Usefull when doing a remote backup)
   * scripts: Added gzip.sh + manual page
   * scripts: Added crypt.sh + manual page
   * scripts: Removed zipped/crypt feature from mirror,
     use rdup -c | crypt.sh | mirror -c 
   * scripts: Simplified yesterday.sh and hist.sh
   * scripts: Added -d switch to hist.sh
   * scripts: The default algorithm for encryption is set 
     to blowfish - if you want to change this you'll
     have to edit the scripts.
   * scripts: mirror.sh: added quotes around file names to protect
     spaces.


23 Feb 2006: 0.2.2 Miek <miek@miek.nl>
   -- major feature release --
   * output changes:
     - directory size is always set to zero
   * Added -F FORMAT option that allows you 
     to specify the exact output of rdup 
     (Patch from Aaron Bader)
   * Added -r: show only removed files
   * Added -m: only show new/modified files
     (Both from Aaron Bader)
   * -0 semantics changed: now only applies to 
     the internal filelist. If you want a NULL use
     '\0' in the -F FORMAT string
   * Documentation was updated to reflect the current code
   * strerror() is now also printed more often
   * add ferror() check to cat() in gfunc.c